add autoencoder for user information

--- a/correct_pagamentos_entries.ipynb
+++ b/correct_pagamentos_entries.ipynb
@@ -108,7 +108,7 @@
     "scaler = StandardScaler()\n",
     "base_cadastral_scaled = scaler.fit_transform(base_cadastral_droped)\n",
     "base_cadastral_scaled = pd.DataFrame(base_cadastral_scaled, columns=base_cadastral_droped.columns)\n",
-    "base_cadastral_scaled.head(3)"
+    "display(base_cadastral_scaled.head(40))"
    ]
   },
   {
@@ -136,7 +136,247 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "base_cadastral_tsne_df = pd.DataFrame(base_cadastral_tsne, columns=['tsne_1', 'tsne_2', 'tsne_3'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "histories = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# autoencoder\n",
+    "from keras.layers import Input, Dense, Dropout\n",
+    "from keras.models import Model\n",
+    "from tensorflow.keras.optimizers import Adam\n",
+    "from keras.layers import BatchNormalization\n",
+    "\n",
+    "input_dim = base_cadastral_scaled.shape[1]\n",
+    "encoding_dim = 3\n",
+    "\n",
+    "input_layer = Input(shape=(input_dim, ))\n",
+    "# make encoder\n",
+    "encoder0 = Dense(25, activation='relu')(input_layer)\n",
+    "encoder0 = BatchNormalization()(encoder0)\n",
+    "encoder0 = Dropout(0.1)(encoder0)\n",
+    "encoder0 = Dense(15, activation='relu')(encoder0)\n",
+    "encoder0 = BatchNormalization()(encoder0)\n",
+    "encoder0 = Dropout(0.1)(encoder0)\n",
+    "encoder0 = Dense(15, activation='relu')(encoder0 + input_layer)\n",
+    "encoder1 = BatchNormalization()(encoder0)\n",
+    "encoder1 = Dropout(0.1)(encoder1)\n",
+    "encoder1 = Dense(15, activation='relu')(encoder1)\n",
+    "encoder1 = BatchNormalization()(encoder1)\n",
+    "encoder1 = Dropout(0.1)(encoder1)\n",
+    "encoder1 = Dense(15, activation='relu')(encoder1 + encoder0)\n",
+    "encoder1 = BatchNormalization()(encoder1)\n",
+    "encoder1 = Dropout(0.1)(encoder1)\n",
+    "encoder = Dense(encoding_dim, activation='linear')(encoder1)\n",
+    "# make decoder\n",
+    "decoder0 = Dense(15, activation='relu')(encoder)\n",
+    "decoder1 = BatchNormalization()(decoder0)\n",
+    "decoder1 = Dropout(0.1)(decoder1)\n",
+    "decoder1 = Dense(15, activation='relu')(decoder1)\n",
+    "decoder1 = BatchNormalization()(decoder1)\n",
+    "decoder1 = Dropout(0.1)(decoder1)\n",
+    "decoder = Dense(15, activation='relu')(decoder1 + decoder0)\n",
+    "decoder = BatchNormalization()(decoder)\n",
+    "decoder = Dropout(0.1)(decoder)\n",
+    "decoder = Dense(15, activation='relu')(decoder)\n",
+    "decoder = BatchNormalization()(decoder)\n",
+    "decoder = Dropout(0.1)(decoder)\n",
+    "decoder = Dense(25, activation='relu')(decoder)\n",
+    "decoder = BatchNormalization()(decoder)\n",
+    "decoder = Dropout(0.1)(decoder)\n",
+    "decoder = Dense(input_dim, activation='linear')(decoder)\n",
+    "autoencoder = Model(inputs=input_layer, outputs=decoder)\n",
+    "\n",
+    "adam = Adam(learning_rate=0.002, weight_decay=0.0001)\n",
+    "autoencoder.compile(optimizer=adam, loss='mean_squared_error', metrics=['accuracy'])\n",
+    "\n",
+    "history = autoencoder.fit(base_cadastral_scaled, base_cadastral_scaled, epochs=200, batch_size=64, shuffle=True, validation_split=0.2)\n",
+    "\n",
+    "encoder = Model(inputs=input_layer, outputs=encoder)\n",
+    "encoded_data = encoder.predict(base_cadastral_scaled)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# loss: 0.3845 - accuracy: 0.8669 - val_loss: 0.5378 - val_accuracy: 0.7452\n",
+    "# loss: 0.3414 - accuracy: 0.7405 - val_loss: 0.4845 - val_accuracy: 0.8745\n",
+    "# loss: 0.3297 - accuracy: 0.7357 - val_loss: 0.4748 - val_accuracy: 0.8745\n",
+    "encoder.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "encoded_data_df = pd.DataFrame(encoded_data, columns=['encoded_1', 'encoded_2', 'encoded_3'])\n",
+    "encoded_data_df['segmento_industrial'] = base_cadastral['segmento_industrial']\n",
+    "encoded_data_df['porte'] = base_cadastral['porte']\n",
+    "encoded_data_df['dominio_email'] = base_cadastral['dominio_email']\n",
+    "encoded_data_df['data_cadastro_since_min'] = base_cadastral_scaled['data_cadastro_since_min']\n",
+    "encoded_data_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# check uniqueness of each encoded representation\n",
+    "encoded_data_df.groupby(['encoded_1', 'encoded_2', 'encoded_3']).size().reset_index().rename(columns={0:'count'}).sort_values(by='count', ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# check if the encoded data is linearly separable unsing 16 plots\n",
+    "fig = plt.figure(figsize=(20, 20))\n",
+    "for i, col in enumerate(base_cadastral_scaled.columns):\n",
+    "    ax = fig.add_subplot(4, 4, i+1, projection='3d')\n",
+    "    ax.scatter(encoded_data_df['encoded_1'], encoded_data_df['encoded_2'], encoded_data_df['encoded_3'], c=base_cadastral_scaled[col], cmap='coolwarm')\n",
+    "    plt.title(col)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "histories.append(history)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# plot loss\n",
+    "fig = plt.figure(figsize=(20, 20))\n",
+    "for i, history in enumerate(histories):\n",
+    "    ax = fig.add_subplot(4, 4, i+1)\n",
+    "    ax.plot(history.history['loss'])\n",
+    "    ax.plot(history.history['val_loss'])\n",
+    "    plt.title('model loss')\n",
+    "    plt.ylabel('loss')\n",
+    "    plt.xlabel('epoch')\n",
+    "    plt.legend(['train', 'validation'])\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 1:  encoder 15, decoder 15, sigmoid\n",
+    "# 2:  encoder 15, decoder 15, linear\n",
+    "# 3:  encoder 10, 10, 3, decoder 10, 10, 15, sigmoid\n",
+    "# 4:  encoder 10, dropout, 10, dropout, 3, decoder 10, dropout, 10, dropout, 15, sigmoid\n",
+    "# 5:  encoder 10, dropout, 10, dropout, 3, decoder 10, dropout, 10, dropout, 15, linear\n",
+    "# 6:  encoder 15, dropout, 10, dropout, 10, dropout, 3, decoder 10, dropout, 10, dropout, 10, dropout, 15, linear, bach_size=64 (double)\n",
+    "# 7:  encoder 15, BN, dropout, 10, BN, dropout, 10, BN, dropout, 3, decoder 10, BN, dropout, 10, BN, dropout, 10, BN, dropout, 15, linear | 17: like 7 w_16 perks, but with BN an linear f. encoder yielded zero repeated representations, v_loss=0.58\n",
+    "# 8:  encoder 25, BN, dropout, 15, BN, dropout, 15, BN, dropout, 3, decoder 15, BN, dropout, 15, BN, dropout, 25, BN, dropout, 15, linear\n",
+    "# 9:  encoder 25, BN, dropout, 15, BN, dropout, 15, BN, dropout, 3, decoder 15, BN, dropout, 15, BN, dropout, 25, BN, dropout, 15, linear\n",
+    "# 10: encoder 25, BN, dropout, 15, BN, dropout, 15, BN, dropout, 3, decoder 15, BN, dropout, 15, BN, dropout, 25, BN, dropout, 15, linear (1/0 skip enc/dec) (double trainning)\n",
+    "# 11: enc.b 25, enc.b 15, enc.b 15, enc.b 15, enc.b 15, 3, dec.b 15, dec.b 15, dec.b 15, dec.b 25, 15, linear (2/1 skip enc/dec)\n",
+    "# 12: enc.b 25, enc.b 15, enc.b 15, enc.b 15, enc.b 15, 3, dec.b 15, dec.b 15, dec.b 15, dec.b 25, 15, linear (2/1 skip enc/dec) (double lr)\n",
+    "# 13: enc.b 25, enc.b 15, enc.b 15, enc.b 15, enc.b 15, 3, dec.b 15, dec.b 15, dec.b 15, dec.b 25, 15, linear (2/1 skip enc/dec) (L2 0.0001)\n",
+    "# 14: enc.b 25, enc.b 15, enc.b 15, enc.b 15, enc.b 15, 3, dec.b 15, dec.b 15, dec.b 15, dec.b 25, 15, linear (2/1 skip enc/dec) ???\n",
+    "# 15: enc.b 25, enc.b 25, enc.b 25, enc.b 25, enc.b 15, 3, dec.b 15, dec.b 25, dec.b 25, dec.b 25, 15, linear (2/1 skip enc/dec) (double depth, \"double\" units)\n",
+    "# 16: enc.b 25, enc.b 15, enc.b 15, enc.b 15, enc.b 15, 3, dec.b 15, dec.b 15, dec.b 15, dec.b 25, 15, linear (2/1 skip enc/dec) (13 but with linear act.fun. for last layer in the encoder) ==> yeilded 11 repeated representations\n",
+    "\n",
+    "# # save the collection of histories to a file\n",
+    "# import pickle\n",
+    "# with open('histories.pickle', 'wb') as f:\n",
+    "#     pickle.dump(histories, f)\n",
+    "\n",
+    "# # load the collection of histories from a file\n",
+    "# import pickle\n",
+    "# with open('histories.pickle', 'rb') as f:\n",
+    "#     histories_loaded = pickle.load(f)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from keras.layers import Input, Dense, Dropout\n",
+    "from keras.models import Model\n",
+    "from tensorflow.keras.optimizers import Adam\n",
+    "from keras.layers import BatchNormalization\n",
+    "\n",
+    "def create_layers(input_layer, units, activation='relu', dropout_rate=0.1):\n",
+    "    x_dense = Dense(units, activation=activation)(input_layer)\n",
+    "    x_bn = BatchNormalization()(x_dense)\n",
+    "    x_drop = Dropout(dropout_rate)(x_bn)\n",
+    "    return [x_dense, x_bn, x_drop]\n",
+    "\n",
+    "def autoencoder_model(input_dim, encoding_dim, learning_rate=0.002, weight_decay=0.0001):\n",
+    "    input_layer = Input(shape=(input_dim, ))\n",
+    "\n",
+    "    # encoder\n",
+    "    encoder = create_layers(input_layer, 25)\n",
+    "    encoder = create_layers(encoder[2], 15)\n",
+    "    encoder = create_layers(encoder[2] + input_layer, 15)\n",
+    "    encoder_skip = create_layers(encoder[2], 15)\n",
+    "    encoder = create_layers(encoder_skip[2] + encoder[1], 15)\n",
+    "    encoded = Dense(encoding_dim, activation='linear')(encoder[2])\n",
+    "\n",
+    "    # decoder\n",
+    "    decoder = create_layers(encoded, 15)\n",
+    "    decoder_skip = create_layers(decoder[2], 15)\n",
+    "    decoder = create_layers(decoder_skip[2] + decoder[1], 15)\n",
+    "    decoder = create_layers(decoder[2], 15)\n",
+    "    decoder = create_layers(decoder[2], 25)\n",
+    "    decoded = Dense(input_dim, activation='linear')(decoder[2])\n",
+    "\n",
+    "    autoencoder = Model(inputs=input_layer, outputs=decoded)\n",
+    "\n",
+    "    adam = Adam(learning_rate=learning_rate, weight_decay=weight_decay)\n",
+    "    autoencoder.compile(optimizer=adam, loss='mean_squared_error', metrics=['accuracy'])\n",
+    "\n",
+    "    return autoencoder\n",
+    "\n",
+    "input_dim = base_cadastral_scaled.shape[1]\n",
+    "encoding_dim = 3\n",
+    "\n",
+    "autoencoder = autoencoder_model(input_dim, encoding_dim)\n",
+    "history = autoencoder.fit(base_cadastral_scaled, base_cadastral_scaled, epochs=200, batch_size=64, shuffle=True, validation_split=0.2)\n",
+    "\n",
+    "encoder = Model(inputs=autoencoder.input, outputs=autoencoder.layers[-18].output)\n",
+    "encoded_data = encoder.predict(base_cadastral_scaled)\n"
+   ]
   }
  ],
  "metadata": {
