--- a/functions.ipynb
+++ b/functions.ipynb
@@ -228,6 +228,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Number of late payments each client has at the time of a new borrowing\n",
+    "base_pagamentos_date_test = base_pagamentos_date.copy().sort_values(['id_cliente', 'data_emissao_documento'])\n",
+    "base_pagamentos_date_test['loan_count'] = base_pagamentos_date_test.groupby('id_cliente').cumcount() + 1\n",
+    "df_non_expired = base_pagamentos_date_test[base_pagamentos_date_test['data_pagamento'] <= base_pagamentos_date_test['data_vencimento']]\n",
+    "df_non_expired['loan_count_non_expired'] = df_non_expired.groupby('id_cliente').cumcount() + 1\n",
+    "base_pagamentos_date_test = pd.merge(base_pagamentos_date_test, df_non_expired[['id_cliente', 'data_emissao_documento', 'loan_count_non_expired']], \n",
+    "                                      on=['id_cliente', 'data_emissao_documento'], how='left')\n",
+    "# base_pagamentos_date_test['loan_count_non_expired'] = base_pagamentos_date_test['loan_count_non_expired'].fillna(0)\n",
+    "base_pagamentos_date_test.tail(40)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# This function will calculate the compounded monthly growth rate\n",
     "def calculate_growth_rate(group):\n",
     "    group = group.sort_values(by='safra_ref')\n",
@@ -795,7 +812,96 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.ensemble import IsolationForest\n",
+    "from skopt import BayesSearchCV\n",
+    "from sklearn.base import BaseEstimator\n",
+    "from sklearn.metrics import f1_score, confusion_matrix\n",
+    "import numpy as np\n",
+    "\n",
+    "class IsolationForestWrapper(BaseEstimator):\n",
+    "    def __init__(self, n_estimators=10, max_samples='auto', contamination=0.1):\n",
+    "        self.n_estimators = n_estimators\n",
+    "        self.max_samples = max_samples\n",
+    "        self.contamination = contamination\n",
+    "        self.model = IsolationForest(n_estimators=self.n_estimators, \n",
+    "                                     max_samples=self.max_samples, \n",
+    "                                     contamination=self.contamination)\n",
+    "        self.y_train = None\n",
+    "\n",
+    "    def fit(self, X, y=None):\n",
+    "        self.y_train = (y == 1).astype(int) if y is not None else None\n",
+    "        self.model.fit(X)\n",
+    "        return self\n",
+    "\n",
+    "    def predict(self, X):\n",
+    "        pred = self.model.predict(X)\n",
+    "        return (pred == 1).astype(int)\n",
+    "\n",
+    "    def score(self, X, y=None):\n",
+    "        if y is not None:\n",
+    "            y = (y == 1).astype(int)\n",
+    "            y_pred = self.predict(X)\n",
+    "            return f1_score(y, y_pred)\n",
+    "        elif self.y_train is not None:\n",
+    "            y_pred = self.predict(X)\n",
+    "            return f1_score(self.y_train, y_pred)\n",
+    "        else:\n",
+    "            raise ValueError(\"No y values were given during fitting, cannot calculate score.\")\n",
+    "\n",
+    "    def set_params(self, **params):\n",
+    "        super().set_params(**params)\n",
+    "        self.model.set_params(**params)\n",
+    "        return self\n",
+    "\n",
+    "iso_forest = IsolationForestWrapper(n_estimators=30)\n",
+    "\n",
+    "params = {\n",
+    "    'contamination': np.linspace(0.01, 0.2, 20)\n",
+    "}\n",
+    "\n",
+    "opt = BayesSearchCV(iso_forest, params, n_iter=25, cv=3, n_jobs=-1)\n",
+    "\n",
+    "opt.fit(X_train, y_train)\n",
+    "\n",
+    "y_pred = opt.predict(X_eval)\n",
+    "\n",
+    "print(confusion_matrix(y_eval, y_pred))\n",
+    "\n",
+    "accuracy = accuracy_score(y_eval, y_pred)\n",
+    "precision = precision_score(y_eval, y_pred)\n",
+    "recall = recall_score(y_eval, y_pred)\n",
+    "f1 = f1_score(y_eval, y_pred)\n",
+    "roc_auc = roc_auc_score(y_eval, y_pred)\n",
+    "\n",
+    "with open('results.txt', 'a') as f:\n",
+    "    print(f\"Best parameters for IsolationForest: {opt.best_params_}\", file=f)\n",
+    "    print(f\"Classifier: IsolationForest\", file=f)\n",
+    "    print(f\"Accuracy: {accuracy}\", file=f)\n",
+    "    print(f\"Precision: {precision}\", file=f)\n",
+    "    print(f\"Recall: {recall}\", file=f)\n",
+    "    print(f\"F1 Score: {f1}\", file=f)\n",
+    "    print(f\"ROC AUC: {roc_auc}\", file=f)\n",
+    "    print(\"------------------------\", file=f)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # loop to print the loss and the metrics of all the models history in the histories list\n",
+    "# for i in range(len(histories)):\n",
+    "#     with open('nn_results.txt', 'a') as f:\n",
+    "#         print(f\"Parameters: {params_list[i]}\", file=f)\n",
+    "#         history_keys = list(histories[i].history.keys())\n",
+    "#         print(f\"Loss: {np.round(np.mean(histories[i].history[history_keys[0]][-3:]),4)} --> {np.round(np.mean(histories[i].history[history_keys[4]][-3:]),4)}\", file=f)\n",
+    "#         print(f\"AUC: {np.round(np.mean(histories[i].history[history_keys[1]][-3:]),4)} --> {np.round(np.mean(histories[i].history[history_keys[5]][-3:]),4)}\", file=f)\n",
+    "#         print(f\"Precision: {np.round(np.mean(histories[i].history[history_keys[2]][-3:]),4)} --> {np.round(np.mean(histories[i].history[history_keys[6]][-3:]),4)}\", file=f)\n",
+    "#         print(f\"Recall: {np.round(np.mean(histories[i].history[history_keys[3]][-3:]),4)} --> {np.round(np.mean(histories[i].history[history_keys[7]][-3:]),4)}\", file=f)\n",
+    "#         print(\"------------------------\", file=f)"
+   ]
   }
  ],
  "metadata": {
