remove metabase files, add csv files

--- a/case_datarisk_victor_martins.ipynb
+++ b/case_datarisk_victor_martins.ipynb
@@ -39,10 +39,10 @@
     "import seaborn as sns\n",
     "\n",
     "# Load the data from the CSV files\n",
-    "base_info = pd.read_csv('base_info.csv')\n",
-    "base_pagamentos = pd.read_csv('base_pagamentos_desenvolvimento.csv')\n",
-    "base_pagamentos_teste = pd.read_csv('base_pagamentos_teste.csv')\n",
-    "base_cadastral = pd.read_csv('base_cadastral.csv')\n",
+    "base_info = pd.read_csv('data/base_info.csv')\n",
+    "base_pagamentos = pd.read_csv('data/base_pagamentos_desenvolvimento.csv')\n",
+    "base_pagamentos_teste = pd.read_csv('data/base_pagamentos_teste.csv')\n",
+    "base_cadastral = pd.read_csv('data/base_cadastral.csv')\n",
     "\n",
     "# lower case all column names\n",
     "base_info.columns = base_info.columns.str.lower()\n",
