--- a/functions.ipynb
+++ b/functions.ipynb
@@ -134,7 +134,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from create_sheets import create_spreadsheet, upload_csv_to_sheet\n",
+    "from sheets.create_sheets import create_spreadsheet, upload_csv_to_sheet\n",
     "\n",
     "spreadsheet_id = create_spreadsheet('Test Spreadsheet')\n",
     "upload_csv_to_sheet(spreadsheet_id, 'base_pagamentos_sorted_id_emissao_pagamento.csv', 'Sheet1')\n",
