pass all markdowns to english

--- a/fraud_prediction.ipynb
+++ b/fraud_prediction.ipynb
@@ -5,12 +5,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Case Datarisk - Detecção de Fraudes\n",
-    "\n",
-    "Foram fornecidas os arquivos base_info.csv, base_cadastral.csv e base_pagamentos.csv.\n",
-    "- base_cadastral possui informações fixas (cadastrais) sobre cada cliente.\n",
-    "- base_info possui informações mensais de renda e número de empregados.\n",
-    "- base_pagamentos possui informações referentes a cada operação de crédito."
+    "# Datarisk Case - Fraud Detection\n",
+    "The base files base_info.csv, base_cadastral.csv, and base_pagamentos.csv were provided.\n",
+    "- base_cadastral has fixed (registry) information about each customer.\n",
+    "- base_info has monthly income and number of employees information.\n",
+    "- base_pagamentos has information regarding each credit operation."
    ]
   },
   {
@@ -18,10 +17,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Preprocessamento e Visualização dos Dados\n",
-    "- leitura dos arquivos e ajuste de cada tipo de dado.\n",
-    "- codificação (one_hot, categorica e ordinal) dos dados cadastrais.\n",
-    "- visualização dos dados do cliente reduzido para 3 dimensões."
+    "## Preprocessing and Data Visualization\n",
+    "- reading of files and adjustment of each type of data.\n",
+    "- encoding (one_hot, categorical, and ordinal) of registry data.\n",
+    "- visualization of customer data reduced to 3 dimensions."
    ]
   },
   {
@@ -30,7 +29,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Leitura dos arquivos e ajuste de cada tipo de dado.\n",
+    "## reading of files and adjustment of each type of data\n",
     "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -61,7 +60,7 @@
     "def convert_date(df, to_date_columns, format):\n",
     "  df_copy = df.copy()\n",
     "  for col in to_date_columns:\n",
-    "    df_copy[col] = pd.to_datetime(df_copy[col], format=format)#.dt.date\n",
+    "    df_copy[col] = pd.to_datetime(df_copy[col], format=format)\n",
     "  return df_copy\n",
     "\n",
     "date_columns = ['data_emissao_documento', 'data_pagamento', 'data_vencimento']\n",
@@ -93,7 +92,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## codificação (one_hot, categorica e ordinal) dos dados da base cadastral\n",
+    "## encoding (one_hot, categorical, and ordinal) of registry data\n",
     "\n",
     "# date encoding\n",
     "def encode_date(df, columns):\n",
@@ -125,7 +124,6 @@
     "base_cadastral_one_hot_encoded = encode_categorical(base_cadastral_date_encoded, ['segmento_industrial', 'dominio_email'])\n",
     "base_cadastral_ordinal_encoded = encode_ordinal(base_cadastral_one_hot_encoded, ['porte'], ordinal_encode_map)\n",
     "base_cadastral_droped = base_cadastral_ordinal_encoded.drop(['id_cliente', 'ddd', 'cep_2_dig'], axis=1)\n",
-    "base_cadastral_droped\n",
     "\n",
     "# standardization\n",
     "from sklearn.preprocessing import StandardScaler\n",
@@ -141,7 +139,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# visualização dos dados do cliente reduzido para 3 dimensões\n",
+    "## visualization of customer data reduced to 3 dimensions\n",
     "\n",
     "from sklearn.manifold import TSNE\n",
     "base_cadastral_tsne = TSNE(n_components=3).fit_transform(base_cadastral_scaled)\n",
@@ -167,11 +165,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Codificação (compressão) da informação de cada cliente na base cadastral\n",
-    "- codificação via modelo autoencoder para redução de dimensionalidade de 15 para 3.\n",
-    "- visualização do treinamento do modelo.\n",
-    "- análise de erro do modelo.\n",
-    "- visualização do cliente em 3 dimensões."
+    "## Encoding (compression) of each customer's information in the registry base\n",
+    "- encoding via autoencoder model for dimensionality reduction from 15 to 3.\n",
+    "- visualization of model training.\n",
+    "- model error analysis.\n",
+    "- visualization of the customer in 3 dimensions."
    ]
   },
   {
@@ -180,7 +178,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## codificação via modelo autoencoder para redução de dimensionalidade de 15 para 3\n",
+    "## encoding via autoencoder model for dimensionality reduction from 15 to 3\n",
     "\n",
     "from keras.layers import Input, Dense, Dropout\n",
     "from keras.models import Model\n",
@@ -237,7 +235,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## visualização do treinamento do modelo\n",
+    "## visualization of model training\n",
     "\n",
     "# plot losses\n",
     "fig = plt.figure(figsize=(20, 20))\n",
@@ -260,7 +258,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## análise de erro do modelo\n",
+    "## model error analysis\n",
     "\n",
     "decoder = Model(inputs=autoencoder.input, outputs=autoencoder.layers[-1].output)\n",
     "decoded_data = decoder.predict(base_cadastral_scaled)\n",
@@ -285,7 +283,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## visualização do cliente em 3 dimensões\n",
+    "## visualization of the customer in 3 dimensions\n",
     "\n",
     "# check uniqueness of each encoded representation\n",
     "encoded_data_df = pd.DataFrame(encoded_data, columns=['encoded_1', 'encoded_2', 'encoded_3'])\n",
@@ -326,10 +324,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Preparo para Modelagem\n",
-    "- junção dos dados e feature engineering.\n",
-    "- testagem de modelos de prateleira --> regressão logistica tem melhor resultado.\n",
-    "- modelo de deteção de anomalia"
+    "## Preparation for Modeling\n",
+    "- data merging and feature engineering.\n",
+    "- testing of off-the-shelf models --> logistic regression has the best result.\n",
+    "- anomaly detection model"
    ]
   },
   {
@@ -338,7 +336,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Junção dos dados e feature engineering\n",
+    "## data merging and feature engineering\n",
     "\n",
     "# statisticaly significant data is lost in the followin merges\n",
     "base_info_join = base_info_date.merge(encoded_data_df, on='id_cliente', how='inner')\n",
@@ -385,8 +383,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## testagem de modelos de prateleira --> regressão logistica tem melhor resultado\n",
-    "\n",
+    "## testing of off-the-shelf models --> logistic regression has the best result\n",
     "\n",
     "from skopt import BayesSearchCV\n",
     "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score, roc_auc_score\n",
@@ -466,7 +463,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## modelo de deteção de anomalia\n",
+    "## anomaly detection model\n",
+    "\n",
     "from sklearn.ensemble import IsolationForest\n",
     "from sklearn.base import BaseEstimator\n",
     "from sklearn.metrics import f1_score, confusion_matrix\n",
@@ -543,10 +541,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Modelo de Rede Neural\n",
-    "- esse modelo possui o melhor resultado.\n",
-    "- o afinamento dos hyperparametros pode ainda deixa-lo melhor.\n",
-    "- novas features, como a proporção de fraudes por cliente trariam maior banefício."
+    "## Neural Network Model\n",
+    "This model has the best result.\n",
+    "\n",
+    "Tuning of hyperparameters can further improve it.\n",
+    "\n",
+    "New features, such as the proportion of frauds per customer would bring greater benefit."
    ]
   },
   {
@@ -652,7 +652,7 @@
    "metadata": {},
    "source": [
     "## Prediction\n",
-    "- usa o modelo anterior para obter a probabilidade de inadimplencia"
+    "- uses the previous model to obtain the probability of default."
    ]
   },
   {
@@ -662,7 +662,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "## Junção dos dados e feature engineering\n",
+    "## uses the previous model to obtain the probability of default\n",
     "\n",
     "# statisticaly significant data is lost in the followin merges\n",
     "base_info_join = base_info_date.merge(encoded_data_df, on='id_cliente', how='inner')\n",
