add new features in feature engineering

--- a/fraud_prediction.ipynb
+++ b/fraud_prediction.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# Datarisk Case - Fraud Detection\n",
-    "The base files base_info.csv, base_cadastral.csv, and base_pagamentos.csv were provided.\n",
+    "The files base_info.csv, base_cadastral.csv, and base_pagamentos.csv were provided.\n",
     "- base_cadastral has fixed (registry) information about each customer.\n",
     "- base_info has monthly income and number of employees information.\n",
     "- base_pagamentos has information regarding each credit operation."
@@ -92,6 +92,90 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def get_late_score(group):\n",
+    "    group = group.sort_values(by='data_emissao_documento')\n",
+    "    group['previous_transactions'] = group['data_vencimento'].expanding().count() - 1\n",
+    "    group['previous_late_transactions'] = group.apply(\n",
+    "        lambda x: group.loc[(group.index < x.name) &\n",
+    "                            (group['data_vencimento'] < x['data_emissao_documento']) &\n",
+    "                            (group['late_payment'] > 0), 'late_payment'\n",
+    "                            ].count(), axis=1\n",
+    "    )\n",
+    "    offset = pd.tseries.offsets.Day(5)\n",
+    "    group['previous_fradulent_transactions'] = group.apply(\n",
+    "        lambda x: group.loc[(group.index < x.name) &\n",
+    "                            (group['fraud']) &\n",
+    "                            (group['data_vencimento'] < x['data_emissao_documento'] - offset), 'fraud'\n",
+    "                            ].count(), axis=1\n",
+    "    )\n",
+    "    group['rate_of_late_transactions'] = (group['previous_late_transactions'] / group['previous_transactions']).fillna(0)\n",
+    "    group['rate_of_fraudulent_transactions'] = (group['previous_fradulent_transactions'] / group['previous_transactions']).fillna(0)\n",
+    "    return group\n",
+    "\n",
+    "grouped = base_pagamentos_date.groupby('id_cliente')\n",
+    "base_pagamentos_date = grouped.apply(get_late_score)\n",
+    "base_pagamentos_late_fraud = base_pagamentos_date.reset_index(level=0, drop=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Columns\n",
+    "columns = ['previous_transactions', 'previous_late_transactions', 'previous_fradulent_transactions', 'rate_of_late_transactions', 'rate_of_fraudulent_transactions']\n",
+    "\n",
+    "# save the last value in each column in columns for each client\n",
+    "base_pagamentos_date_last = base_pagamentos_late_fraud.groupby('id_cliente').tail(1)[['id_cliente'] + columns]\n",
+    "\n",
+    "# pass columns to base_pagaemntos_teste\n",
+    "base_pagamentos_teste_late_fraud = base_pagamentos_teste_date.merge(base_pagamentos_date_last, on='id_cliente', how='left').fillna(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# This function will calculate the compounded monthly growth rate\n",
+    "def get_monthly_growth_rate(group):\n",
+    "    group = group.sort_values(by='safra_ref')\n",
+    "    values = [np.nan]\n",
+    "\n",
+    "    for row in range(1, len(group)):\n",
+    "        initial_value = group['renda_mes_anterior'].iloc[row]\n",
+    "        final_value = group['renda_mes_anterior'].iloc[row-1]\n",
+    "        start_date = group['safra_ref'].iloc[row]\n",
+    "        end_date = group['safra_ref'].iloc[row-1]\n",
+    "\n",
+    "        # Calculate the number of periods (in months)\n",
+    "        months_passed = (end_date.year - start_date.year) * 12 + (end_date.month - start_date.month)\n",
+    "        \n",
+    "        if months_passed == 0 or initial_value == 0:\n",
+    "            value = np.nan\n",
+    "        else:\n",
+    "            value = (final_value / initial_value) ** (1/months_passed) - 1\n",
+    "        values.append(value)\n",
+    "\n",
+    "    group['monthly_growth'] = values\n",
+    "    group['monthly_growth'] = group['monthly_growth'].fillna(0)\n",
+    "    \n",
+    "    # group['ema_monthly_growth'] = np.ema(values, decay=0.9)\n",
+    "    return group\n",
+    "\n",
+    "# Group by client_id\n",
+    "grouped = base_info_date.groupby('id_cliente')\n",
+    "base_info_date = grouped.apply(get_monthly_growth_rate)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "## encoding (one_hot, categorical, and ordinal) of registry data\n",
     "\n",
     "# date encoding\n",
@@ -139,25 +223,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## visualization of customer data reduced to 3 dimensions\n",
+    "# ## visualization of customer data reduced to 3 dimensions\n",
     "\n",
-    "from sklearn.manifold import TSNE\n",
-    "base_cadastral_tsne = TSNE(n_components=3).fit_transform(base_cadastral_scaled)\n",
-    "print(base_cadastral_tsne.shape)\n",
+    "# from sklearn.manifold import TSNE\n",
+    "# base_cadastral_tsne = TSNE(n_components=3).fit_transform(base_cadastral_scaled)\n",
+    "# print(base_cadastral_tsne.shape)\n",
     "\n",
-    "# plot 16 TSNEs with different columns as color\n",
-    "fig = plt.figure(figsize=(20, 20))\n",
-    "for i, col in enumerate(base_cadastral_scaled.columns):\n",
-    "    ax = fig.add_subplot(4, 4, i+1, projection='3d')\n",
-    "    ax.scatter(base_cadastral_tsne[:, 0], \n",
-    "               base_cadastral_tsne[:, 1], \n",
-    "               base_cadastral_tsne[:, 2], \n",
-    "               c=base_cadastral_scaled[col], \n",
-    "               cmap='coolwarm')\n",
-    "    plt.title(col)\n",
-    "plt.show()\n",
+    "# # plot 16 TSNEs with different columns as color\n",
+    "# fig = plt.figure(figsize=(20, 20))\n",
+    "# for i, col in enumerate(base_cadastral_scaled.columns):\n",
+    "#     ax = fig.add_subplot(4, 4, i+1, projection='3d')\n",
+    "#     ax.scatter(base_cadastral_tsne[:, 0], \n",
+    "#                base_cadastral_tsne[:, 1], \n",
+    "#                base_cadastral_tsne[:, 2], \n",
+    "#                c=base_cadastral_scaled[col], \n",
+    "#                cmap='coolwarm')\n",
+    "#     plt.title(col)\n",
+    "# plt.show()\n",
     "\n",
-    "base_cadastral_tsne_df = pd.DataFrame(base_cadastral_tsne, columns=['tsne_1', 'tsne_2', 'tsne_3'])"
+    "# base_cadastral_tsne_df = pd.DataFrame(base_cadastral_tsne, columns=['tsne_1', 'tsne_2', 'tsne_3'])"
    ]
   },
   {
@@ -340,14 +424,13 @@
     "\n",
     "# statisticaly significant data is lost in the followin merges\n",
     "base_info_join = base_info_date.merge(encoded_data_df, on='id_cliente', how='inner')\n",
-    "base_join = base_info_join.merge(base_pagamentos_date, on=['id_cliente', 'safra_ref'], how='inner')\n",
+    "base_join = base_info_join.merge(base_pagamentos_late_fraud, on=['id_cliente', 'safra_ref'], how='inner')\n",
     "base_join_date_ordered = base_join.sort_values(by=['safra_ref'])\n",
     "\n",
     "def encode_dates_given_ref(df, columns, ref):\n",
     "    df_copy = df.copy()\n",
     "    for col in columns:\n",
-    "        min_date = ref\n",
-    "        df_copy[col + '_since_min'] = (df_copy[col] - min_date).dt.days + 1\n",
+    "        df_copy[col + '_since_min'] = (df_copy[col] - ref).dt.days + 1\n",
     "        df_copy[col + '_year'] = df_copy[col].dt.year\n",
     "        df_copy[col + '_month'] = df_copy[col].dt.month\n",
     "        df_copy[col + '_day'] = df_copy[col].dt.day\n",
@@ -361,8 +444,6 @@
     "base_join_date['renda_por_funcionario'] = base_join_date['renda_mes_anterior'] / base_join_date['no_funcionarios'].apply(lambda x: x if x > 0 else 1)\n",
     "base_join_date['valor_a_pagar_por_renda'] = base_join_date['valor_a_pagar'] / base_join_date['renda_mes_anterior']\n",
     "base_join_date['duracao_emprestimo'] = base_join_date['data_vencimento_since_min'] - base_join_date['data_emissao_documento_since_min']\n",
-    "# add number of loans late by client at the time of the loan / total number of loans taken by the client at the time of the loan\n",
-    "# add number of frauds by client at the time of the loan / total number of loans taken by the client at the time of the loan\n",
     "\n",
     "X = base_join_date.drop(['id_cliente', 'safra_ref', 'data_pagamento', 'late_payment', 'fraud'], axis=1)\n",
     "y = base_join_date['fraud']\n",
@@ -423,7 +504,7 @@
     "        clf_name = clf.__class__.__name__\n",
     "\n",
     "        # Define the BayesSearchCV\n",
-    "        opt = BayesSearchCV(clf, params, n_iter=25, cv=3, n_jobs=-1) # change n_iter to 50 does not improve the results significantly\n",
+    "        opt = BayesSearchCV(clf, params, n_iter=10, cv=3, n_jobs=-1) # change n_iter to 50 does not improve the results significantly\n",
     "\n",
     "        # Train the classifier\n",
     "        opt.fit(X_train, y_train)\n",
@@ -471,7 +552,7 @@
     "import numpy as np\n",
     "\n",
     "class IsolationForestWrapper(BaseEstimator):\n",
-    "    def __init__(self, n_estimators=10, max_samples='auto', contamination=0.1):\n",
+    "    def __init__(self, n_estimators=25, max_samples='auto', contamination=0.1):\n",
     "        self.n_estimators = n_estimators\n",
     "        self.max_samples = max_samples\n",
     "        self.contamination = contamination\n",
@@ -511,7 +592,7 @@
     "    'contamination': np.linspace(0.01, 0.2, 20)\n",
     "}\n",
     "\n",
-    "opt = BayesSearchCV(iso_forest, params, n_iter=25, cv=3, n_jobs=-1)\n",
+    "opt = BayesSearchCV(iso_forest, params, n_iter=20, cv=3, n_jobs=-1)\n",
     "\n",
     "opt.fit(X_train, y_train)\n",
     "\n",
@@ -666,7 +747,7 @@
     "\n",
     "# statisticaly significant data is lost in the followin merges\n",
     "base_info_join = base_info_date.merge(encoded_data_df, on='id_cliente', how='inner')\n",
-    "base_join_test = base_info_join.merge(base_pagamentos_teste_date, on=['id_cliente', 'safra_ref'], how='inner')\n",
+    "base_join_test = base_info_join.merge(base_pagamentos_teste_late_fraud, on=['id_cliente', 'safra_ref'], how='inner')\n",
     "base_join_test_date_ordered = base_join_test.sort_values(by=['safra_ref'])\n",
     "\n",
     "base_join_date_test = encode_dates_given_ref(base_join_test_date_ordered, ['data_emissao_documento', 'data_vencimento'], MIN_DATE)\n",
@@ -691,13 +772,6 @@
     "final.columns = final.columns.str.upper()\n",
     "final"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
