update readme and add comments to main file

--- a/fraud_prediction.ipynb
+++ b/fraud_prediction.ipynb
@@ -33,9 +33,7 @@
     "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from datetime import timedelta\n",
     "import matplotlib.pyplot  as plt\n",
-    "import seaborn as sns\n",
     "\n",
     "# Load the data from the CSV files\n",
     "base_info = pd.read_csv('data/base_info.csv')\n",
@@ -81,7 +79,7 @@
     "base_cadastral_date.ddd = base_cadastral_date.ddd.fillna('NAN')\n",
     "base_cadastral_date.loc[base_cadastral_date['ddd'].str.contains(\"\\(\"), 'ddd'] = 'INVALID'\n",
     "\n",
-    "# Add a binary column, fraud, to base_pagamentos_desenvolvimento_coherent and assing 1 to rows where DATA_PAGAMENTO > DATA_VENCIMENTO + 5\n",
+    "\n",
     "base_pagamentos_date['late_payment'] = (base_pagamentos_date['data_pagamento'] - base_pagamentos_date['data_vencimento']).dt.days\n",
     "base_pagamentos_date['fraud'] = np.where(base_pagamentos_date['late_payment'] > 5, 1, 0)"
    ]
@@ -163,6 +161,7 @@
     "    group['monthly_growth'] = group['monthly_growth'].fillna(0)\n",
     "    \n",
     "    # group['ema_monthly_growth'] = np.ema(values, decay=0.9)\n",
+    "    # group['sma_monthly_growth'] = np.sma(n=3)\n",
     "    return group\n",
     "\n",
     "# Group by client_id\n",
@@ -549,7 +548,6 @@
     "from sklearn.ensemble import IsolationForest\n",
     "from sklearn.base import BaseEstimator\n",
     "from sklearn.metrics import f1_score, confusion_matrix\n",
-    "import numpy as np\n",
     "\n",
     "class IsolationForestWrapper(BaseEstimator):\n",
     "    def __init__(self, n_estimators=25, max_samples='auto', contamination=0.1):\n",
@@ -756,6 +754,12 @@
     "base_join_date_test['renda_por_funcionario'] = base_join_date_test['renda_mes_anterior'] / base_join_date_test['no_funcionarios'].apply(lambda x: x if x > 0 else 1)\n",
     "base_join_date_test['valor_a_pagar_por_renda'] = base_join_date_test['valor_a_pagar'] / base_join_date_test['renda_mes_anterior']\n",
     "base_join_date_test['duracao_emprestimo'] = base_join_date_test['data_vencimento_since_min'] - base_join_date_test['data_emissao_documento_since_min']\n",
+    "# loan rate monthly, 3-monthly. check correlation of rate with fraud\n",
+    "# quantity of loans in the last month, 3-months. maybe as compared to client average (does the current rate of loans is higher than usual?)\n",
+    "# is first loan? is first loan in the last 3 months?\n",
+    "# is the loan rate higher than the average of the client?\n",
+    "# is the amount of the loan higher than the average of the client?\n",
+    "# is the amount of the loan higher than the clients average?\n",
     "\n",
     "X_test = base_join_date_test.drop(['id_cliente', 'safra_ref'], axis=1)\n",
     "\n",
